[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["spatium"]
name = "gdmath"
version = "1.5.4"
description = "GdMath: a fast spatial math library [RENAMED TO: Spatium]"
readme = "README.md"
requires-python = ">= 3.9"
license = {file = "LICENSE.txt"}
authors = [{name = "shBLOCK", email = "shblock3@gmail.com"}]
keywords = [
    "vector",
    "linear algebra",
    "math",
    "math library",
    "spatial",
    "spatial math",
    "gamedev",
    "game development",
]
classifiers = [
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
"Source" = "https://github.com/shBLOCK/spatium"
"Documentation" = "https://github.com/shBLOCK/spatium/wiki"
"Issue Tracker" = "https://github.com/shBLOCK/spatium/issues"